history block add

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
 <app-input-form></app-input-form>
 <app-wiki-block class="wiki-block-wrapper"></app-wiki-block>
+<app-archive-block></app-archive-block>
