--- a/src/app/wiki-block/wiki-block.component.css
+++ b/src/app/wiki-block/wiki-block.component.css
@@ -11,6 +11,13 @@
   display: block;
 }
 
+.found-block-wrapper
+{
+  position: relative;
+  transition-property: all;
+  transition-duration: 1.5s;
+}
+
 .found-block__title
 {
   margin: 10px;
@@ -36,4 +43,14 @@
 .load-more
 {
   display: flex;
+}
+
+.info-block
+{
+  display: flex;
+  margin: 10px;
+  width: 100%;
+  font-size: 15px;
+  color: rgba(145, 145, 145, .7);
+  justify-content: space-between;
 }
