history block fixed, css bugs fixed

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -11,6 +11,13 @@
   flex-wrap: wrap;
 }
 
+.wiki-block-wrapper
+{
+  overflow: hidden;
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .input-app-wrapper,
 .wiki-block-wrapper
 {
