--- a/src/app/wiki-block/wiki-block.component.css
+++ b/src/app/wiki-block/wiki-block.component.css
@@ -13,6 +13,7 @@
 
 .found-block-wrapper
 {
+  width: 100%;
   position: relative;
   transition-property: all;
   transition-duration: 1.5s;
@@ -42,6 +43,7 @@
 
 .load-more
 {
+  width: 100%;
   display: flex;
 }
 
