build error fixed

--- a/src/app/wiki-block/wiki-block.component.html
+++ b/src/app/wiki-block/wiki-block.component.html
@@ -28,5 +28,5 @@
 [showBlock]="showClassForSettingsComp"
 [totalhits]="totalhits"
 [averageWordNumber]="averageWordNumber"
-[ngClass]="showBlock">
+[ngClass]="showClassForSettingsComp">
 </app-settings-block>
